# YAWF

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASING.md  THIRD-PARTY-NOTICES.md  electron-builder.yml  eslint.config.js  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
app/: README.md  electron-builder.yml  package.json
app/src/: preload.js  profile.js  settings.js  tray.js
debian/: changelog  control  copyright  watch
debian/upstream/: metadata
docs/: automation-api.md
flatpak/: io.github.wahid7852.YAWF.yml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/aur-electron/: .SRCINFO  PKGBUILD  yawf.desktop
packaging/flatpak/: io.github.wahid7852.YAWF.yml
resource/: CMakeLists.txt  gresource.xml
resource/desktop/: io.github.wahid7852.YAWF.metainfo.xml.in
resource/ui/: MainWindow.ui  PreferencesWindow.ui  ShortcutsWindow.ui
snap/: snapcraft.yaml
src/: i18n.js  i18n.test.js  main.cpp  main.js  preload.js  profile.test.js  screenshot.js  screenshot.test.js  settings.js  settings.test.js  tray.js
src/api/: apiKeyStore.js  apiKeyStore.test.js  auditLog.js  auditLog.test.js  auth.js  auth.test.js  rateLimit.js  rateLimit.test.js  server.js  server.test.js
src/bridge/: client.js  client.test.js  injected.js  normalize.js  normalize.test.js  protocol.js
src/locales/: bn.json  cs.json  de.json  en.json  es.json  fr.json  hu.json  it.json  ka.json  nl.json  pl.json  pt_BR.json  ru.json  si.json  tr.json  uk.json  zh_Hans.json
src/ui/: Application.cpp  MainWindow.cpp  MainWindow.hpp  WebView.cpp  (+3 more)
(+43 files in other folders)
